enforce right-padding in block body

--- a/beamerthemejku.sty
+++ b/beamerthemejku.sty
@@ -1794,8 +1794,10 @@
     \begin{beamercolorbox}[sep=1ex,vmode]{block body}%
         \usebeamerfont{block body}%
         \setlength{\leftmargini}{\dimexpr\leftmargini + 1ex + 0.125em\relax}%
+        \begin{minipage}{\dimexpr\textwidth-2ex\relax}%
 }
 \setbeamertemplate{block end}{%
+        \end{minipage}%
     \end{beamercolorbox}%
     \vskip\smallskipamount%
 }
@@ -1819,8 +1821,10 @@
     \begin{beamercolorbox}[sep=1ex,vmode]{block body example}%
         \usebeamerfont{block body}%
         \setlength{\leftmargini}{\dimexpr\leftmargini + 1ex + 0.125em\relax}%
+        \begin{minipage}{\dimexpr\textwidth-2ex\relax}%
 }
 \setbeamertemplate{block example end}{%
+        \end{minipage}%
     \end{beamercolorbox}%
     \vskip\smallskipamount%
 }
@@ -1844,8 +1848,10 @@
     \begin{beamercolorbox}[sep=1ex,vmode]{block body alerted}%
         \usebeamerfont{block body}%
         \setlength{\leftmargini}{\dimexpr\leftmargini + 1ex + 0.125em\relax}%
+        \begin{minipage}{\dimexpr\textwidth-2ex\relax}%
 }
 \setbeamertemplate{block alerted end}{%
+        \end{minipage}%
     \end{beamercolorbox}%
     \vskip\smallskipamount%
 }
