remove default language for listings

--- a/beamerfontthemejku.sty
+++ b/beamerfontthemejku.sty
@@ -372,7 +372,7 @@
 \def\verbatim@font{\fontsize{10pt}{11pt}\jkubeamer@verbfamily}
 
 \lstset{%
-    language=C,%[LaTeX]TeX,
+    %language=[LaTeX]TeX,
     extendedchars=true,
     columns=fullflexible, % since we are using a fixed-width font anyways
     keepspaces=true,      % needs to be set to maintain fixed-width property of spaces with fullflexible
