disallow all font-sizes except the default 11pt

--- a/beamerthemejku.sty
+++ b/beamerthemejku.sty
@@ -207,6 +207,12 @@
 \DeclareOptionBeamer{9pt}{%
     \PackageError{beamerthemejku}{Option `9pt' is not allowed, do not mess with font sizes!}{}%
 }
+\DeclareOptionBeamer{10pt}{%
+    \PackageError{beamerthemejku}{Option `10pt' is not allowed, do not mess with font sizes!}{}%
+}
+\DeclareOptionBeamer{12pt}{%
+    \PackageError{beamerthemejku}{Option `12pt' is not allowed, do not mess with font sizes!}{}%
+}
 \DeclareOptionBeamer{14pt}{%
     \PackageError{beamerthemejku}{Option `14pt' is not allowed, do not mess with font sizes!}{}%
 }
