--- a/beamerthemejku.sty
+++ b/beamerthemejku.sty
@@ -502,32 +502,38 @@
     \sbox{\jkubeamer@logoblack@de}{%
         \jkubeamer@IfLogoFileExists{\jkubeamer@logo@getname{\jkubeamer@institute@code}{de}{black}}{%
             \includegraphics[height=\jkubeamer@logo@height]{\jkubeamer@logo@getname{\jkubeamer@institute@code}{de}{black}}%
+        }{\jkubeamer@IfLogoFileExists{\jkubeamer@logo@getname{\jkubeamer@institute@code}{}{black}}{%
+            \includegraphics[height=\jkubeamer@logo@height]{\jkubeamer@logo@getname{\jkubeamer@institute@code}{}{black}}%
         }{%
-            \usebox{\jkubeamer@logoblack@en}%
-        }%
+            \includegraphics[height=\jkubeamer@logo@height]{\jkubeamer@logo@getname{}{de}{black}}%
+        }}%
     }
     \sbox{\jkubeamer@logocolor@de}{%
         \jkubeamer@IfLogoFileExists{\jkubeamer@logo@getname{\jkubeamer@institute@code}{de}{color}}{%
             \includegraphics[height=\jkubeamer@logo@height]{\jkubeamer@logo@getname{\jkubeamer@institute@code}{de}{color}}%
-        }{\jkubeamer@IfLogoFileExists{\jkubeamer@logo@getname{\jkubeamer@institute@code}{de}{black}}{%
-            \usebox{\jkubeamer@logoblack@de}%
+        }{\jkubeamer@IfLogoFileExists{\jkubeamer@logo@getname{\jkubeamer@institute@code}{}{color}}{%
+            \includegraphics[height=\jkubeamer@logo@height]{\jkubeamer@logo@getname{\jkubeamer@institute@code}{}{color}}%
         }{%
-            \usebox{\jkubeamer@logocolor@en}%
+            \usebox{\jkubeamer@logoblack@de}%
         }}%
     }
     \sbox{\jkubeamer@logowhite@de}{%
         \jkubeamer@IfLogoFileExists{\jkubeamer@logo@getname{\jkubeamer@institute@code}{de}{white}}{%
             \includegraphics[height=\jkubeamer@logo@height]{\jkubeamer@logo@getname{\jkubeamer@institute@code}{de}{white}}%
+        }{\jkubeamer@IfLogoFileExists{\jkubeamer@logo@getname{\jkubeamer@institute@code}{}{white}}{%
+            \includegraphics[height=\jkubeamer@logo@height]{\jkubeamer@logo@getname{\jkubeamer@institute@code}{}{white}}%
         }{%
-            \usebox{\jkubeamer@logowhite@en}%
-        }%
+            \includegraphics[height=\jkubeamer@logo@height]{\jkubeamer@logo@getname{}{de}{white}}%
+        }}%
     }
     \sbox{\jkubeamer@footerlogo@de}{%
         \jkubeamer@IfLogoFileExists{\jkubeamer@logo@getname{\jkubeamer@institute@code}{de}{black_wide}}{%
             \includegraphics[height=\jkubeamer@footerlogo@height]{\jkubeamer@logo@getname{\jkubeamer@institute@code}{de}{black_wide}}%
+        }{\jkubeamer@IfLogoFileExists{\jkubeamer@logo@getname{\jkubeamer@institute@code}{}{black_wide}}{%
+            \includegraphics[height=\jkubeamer@footerlogo@height]{\jkubeamer@logo@getname{\jkubeamer@institute@code}{}{black_wide}}%
         }{%
-            \usebox{\jkubeamer@footerlogo@en}%
-        }%
+            \includegraphics[height=\jkubeamer@footerlogo@height]{\jkubeamer@logo@getname{}{de}{black_wide}}%
+        }}%
     }%
 }
 \jkubeamer@updatelogos% execute logo fetching now
