fix odd color combination

--- a/beamercolorthemejku.sty
+++ b/beamercolorthemejku.sty
@@ -182,7 +182,7 @@
 \setbeamercolor*{palette tertiary}{bg=white,fg=jkuGrey}
 \setbeamercolor*{palette jku highlight}{bg=jkuDarkGrey,fg=jkuPurple}
 \setbeamercolor*{palette med highlight}{bg=jkuDarkGrey,fg=jkuGreen}
-\setbeamercolor*{palette re highlight}{bg=jkuDarkGrey,fg=jkuCyan}
+\setbeamercolor*{palette re highlight}{bg=jkuDarkGrey,fg=jkuBlue}
 \setbeamercolor*{palette sowi highlight}{bg=jkuDarkGrey,fg=jkuPurple}
 \setbeamercolor*{palette tnf highlight}{bg=jkuDarkGrey,fg=jkuPurple}
 \setbeamercolor*{palette lit highlight}{parent=palette tnf highlight}
