define \textverb{} command to typeset text in the verbatim font

--- a/beamerfontthemejku.sty
+++ b/beamerfontthemejku.sty
@@ -369,7 +369,11 @@
 %% Verbatim and listings
 %% 
 
-\def\verbatim@font{\fontsize{10pt}{11pt}\jkubeamer@verbfamily}
+%\def\verbatim@font{\fontsize{10pt}{11pt}\jkubeamer@verbfamily\hyphenchar\font\m@ne\@noligs}
+\def\verbatim@font{\normalfont\jkubeamer@verbfamily\hyphenchar\font\m@ne\@noligs}
+
+% Command \textverb{...}: Display argument in verbatim font (unlike with \verb|...|, the argument is not treated as verbatim).
+\newcommand{\textverb}[1]{{\verbatim@font #1}}
 
 \lstset{%
     %language=[LaTeX]TeX,
