--- a/beamerthemejku.sty
+++ b/beamerthemejku.sty
@@ -241,6 +241,8 @@
 \DeclareOptionBeamer{nocompactverb}{\PassOptionsToPackage{nocompactverb}{beamerfontthemejku}}
 \DeclareOptionBeamer{compactmono}[true]{\PassOptionsToPackage{compactmono=#1}{beamerfontthemejku}}
 \DeclareOptionBeamer{nocompactmono}{\PassOptionsToPackage{nocompactmono}{beamerfontthemejku}}
+\DeclareOptionBeamer{mathastext}[true]{\PassOptionsToPackage{mathastext=#1}{beamerfontthemejku}}
+\DeclareOptionBeamer{nomathastext}{\PassOptionsToPackage{nomathastext}{beamerfontthemejku}}
 
 \ProcessOptionsBeamer
 
