tweak URL style

--- a/beamerfontthemejku.sty
+++ b/beamerfontthemejku.sty
@@ -424,6 +424,19 @@
 }
 
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%% 
+%% URLs
+%% 
+
+\urlstyle{same}
+
+% Nasty hack to emulate passing option `hyphens' to the url package:
+\def\do@url@hyp{\do\-}
+
+%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% 
