--- a/references.bib
+++ b/references.bib
@@ -1,19 +1,17 @@
-@Misc{schultz,
-author = {David M. Schultz},
-title = {Do you end with a `thank you' or `questions?' slide?},
-month = {February 9},
-year = {2011},
-url = {http://eloquentscience.com/2011/02/do-you-end-with-a-thank-you-or-questions-slide/},
-urldate = {25/02/2016},
-lastchecked = {25/02/2016}
+@misc{schultz,
+	author = {Schultz, David M.},
+	title = {Do you end with a `thank you' or `questions?' slide?},
+	month = FEB,
+	year = {2011},
+	url = {https://eloquentscience.com/2011/02/do-you-end-with-a-thank-you-or-questions-slide/},
+	howpublished = {\url{https://eloquentscience.com/2011/02/do-you-end-with-a-thank-you-or-questions-slide/}},
 }
 
-@Misc{karol,
-author = {Karol, K.},
-title = {Two Slides That are Ruining Your Damn PowerPoint Presentation},
-month = {October 8},
-year = {2015},
-url = {http://newinternetorder.com/2-slides-that-are-ruining-your-damn-powerpoint-presentation/},
-urldate = {25/02/2016},
-lastchecked = {25/02/2016}
+@misc{karol,
+	author = {{Karol K.}},
+	title = {2 Slides That are Ruining Your Damn PowerPoint Presentation},
+	month = OCT,
+	year = {2015},
+	url = {https://newinternetorder.com/2-slides-that-are-ruining-your-damn-powerpoint-presentation/},
+	howpublished = {\url{https://newinternetorder.com/2-slides-that-are-ruining-your-damn-powerpoint-presentation/}},
 }
