add public repository URL

--- a/main.tex
+++ b/main.tex
@@ -243,7 +243,7 @@
 \frametitle{Installation}
 
 \begin{itemize}
-\item Download the latest version of the theme package from \textbf{TODO}.
+\item Download the latest version of the theme package from \url{https://github.com/michaelroland/jku-templates-presentation-latex}.
 \item Extract its contents (unzip) and move the files to a location on your computer where {\LaTeX} will find them. The most portable choice is the folder of your main presentation file.
 \item Use \texttt{main.tex} (the source of this presentation) as a starting point for building your own presentation. It contains detailed guides about the various package options.
 \item Use \texttt{xelatex} as the {\LaTeX} typesetting engine (because it includes enhanced font support). \texttt{pdflatex} is also supported but does not deliver the full theme experience.
@@ -1165,11 +1165,11 @@ You see, btw., the slide title can run over several lines \ldots
 \begin{frame}
 \frametitle{JKU Theme Information}
 
-This a beamer theme for Johannes Kepler University Linz, Austria.
+This a beamer theme for \href{https://www.jku.at/}{Johannes Kepler University Linz, Austria}.
 
 \bigskip
 \begin{exampleblock}{Want to report a bug? Want to request improvements?}
-You are always welcome to suggest improvements via the official repository at \textbf{TODO}.
+You are always welcome to suggest improvements via the official repository at \url{https://github.com/michaelroland/jku-templates-presentation-latex}.
 \end{exampleblock}
 \end{frame}
 
