fix command names in warning messages

--- a/beamerthemejku.sty
+++ b/beamerthemejku.sty
@@ -1399,13 +1399,13 @@
 
 % DEPRECATED command \jkulogogrey: see \jkulogo[dark]
 \newcommand{\jkulogogrey}{
-    \PackageWarning{beamerthemejku}{Command `\string\jkulogoblack' deprecated, use `\string\jkulogo[dark]' instead!}%
+    \PackageWarning{beamerthemejku}{Command `\string\jkulogogrey' deprecated, use `\string\jkulogo[dark]' instead!}%
     \jkulogo[dark]%
 }
 
 % DEPRECATED command \jkulogowhite: see \jkulogo[light]
 \newcommand{\jkulogowhite}{
-    \PackageWarning{beamerthemejku}{Command `\string\jkulogoblack' deprecated, use `\string\jkulogo[light]' instead!}%
+    \PackageWarning{beamerthemejku}{Command `\string\jkulogowhite' deprecated, use `\string\jkulogo[light]' instead!}%
     \jkulogo[light]%
 }
 
